--- a/rocketProject/package.json
+++ b/rocketProject/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "faker": "5.5.3",
+    "firebase": "^10.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mdb-react-ui-kit": "^6.3.0",
